initial use of help on ucrButtons

--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -233,6 +233,7 @@
     <Compile Include="dlgColumnStats.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="mHelpConstants.vb" />
     <Compile Include="sdgRestrict.Designer.vb">
       <DependentUpon>sdgRestrict.vb</DependentUpon>
     </Compile>
@@ -2532,6 +2533,7 @@
     <Content Include="static\InstatObject\R\Rsetup.R">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="static\Help\R-Instat.chm" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
