added Operator to RSyntax and updated RSyntax

--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <Compile Include="clsDistribution.vb" />
     <Compile Include="clsRFunction.vb" />
+    <Compile Include="clsROperator.vb" />
     <Compile Include="dlgAddStartRain.designer.vb">
       <DependentUpon>dlgAddStartRain.vb</DependentUpon>
     </Compile>
