--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -240,6 +240,12 @@
     <Compile Include="dlgOneWayANOVA.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="sdgOptions.Designer.vb">
+      <DependentUpon>sdgOptions.vb</DependentUpon>
+    </Compile>
+    <Compile Include="sdgOptions.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="sdgRestrict.Designer.vb">
       <DependentUpon>sdgRestrict.vb</DependentUpon>
     </Compile>
@@ -1281,6 +1287,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgOneWayANOVA.sw-KE.resx">
       <DependentUpon>dlgOneWayANOVA.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgOptions.fr-FR.resx">
+      <DependentUpon>sdgOptions.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgOptions.resx">
+      <DependentUpon>sdgOptions.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgOptions.sw-KE.resx">
+      <DependentUpon>sdgOptions.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="sdgRestrict.fr-FR.resx">
       <DependentUpon>sdgRestrict.vb</DependentUpon>
