--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -1076,18 +1076,6 @@
     <Compile Include="ucrFactor.vb">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ucrFactorMultiple.Designer.vb">
-      <DependentUpon>ucrFactorMultiple.vb</DependentUpon>
-    </Compile>
-    <Compile Include="ucrFactorMultiple.vb">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="ucrFactorSingle.Designer.vb">
-      <DependentUpon>ucrFactorSingle.vb</DependentUpon>
-    </Compile>
-    <Compile Include="ucrFactorSingle.vb">
-      <SubType>UserControl</SubType>
-    </Compile>
     <Compile Include="ucrMultipleNumeric.Designer.vb">
       <DependentUpon>ucrMultipleNumeric.vb</DependentUpon>
     </Compile>
@@ -2460,6 +2448,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ucrDistributionsWithParameters.sw-KE.resx">
       <DependentUpon>ucrDistributionsWithParameters.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrFactor.fr-FR.resx">
+      <DependentUpon>ucrFactor.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrFactor.resx">
+      <DependentUpon>ucrFactor.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrFactor.sw-KE.resx">
+      <DependentUpon>ucrFactor.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ucrMultipleNumeric.fr-FR.resx">
       <DependentUpon>ucrMultipleNumeric.vb</DependentUpon>
