--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -136,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsDistribution.vb" />
+    <Compile Include="clsInstatOptions.vb" />
     <Compile Include="clsRFunction.vb" />
     <Compile Include="clsROperator.vb" />
     <Compile Include="dlgAddStartRain.designer.vb">
