--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -277,6 +277,12 @@
     <Compile Include="dlgSummaryBarOrPieChart.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="sdgBarChart.Designer.vb">
+      <DependentUpon>sdgBarChart.vb</DependentUpon>
+    </Compile>
+    <Compile Include="sdgBarChart.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="sdgCorrPlot.Designer.vb">
       <DependentUpon>sdgCorrPlot.vb</DependentUpon>
     </Compile>
@@ -1384,6 +1390,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgSummaryBarOrPieChart.sw-KE.resx">
       <DependentUpon>dlgSummaryBarOrPieChart.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgBarChart.fr-FR.resx">
+      <DependentUpon>sdgBarChart.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgBarChart.resx">
+      <DependentUpon>sdgBarChart.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgBarChart.sw-KE.resx">
+      <DependentUpon>sdgBarChart.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="sdgCorrPlot.fr-FR.resx">
       <DependentUpon>sdgCorrPlot.vb</DependentUpon>
