--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -304,6 +304,12 @@
     <Compile Include="sdgBarChart.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="sdgBoxPlot.Designer.vb">
+      <DependentUpon>sdgBoxPlot.vb</DependentUpon>
+    </Compile>
+    <Compile Include="sdgBoxPlot.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="sdgCorrPlot.Designer.vb">
       <DependentUpon>sdgCorrPlot.vb</DependentUpon>
     </Compile>
@@ -1468,6 +1474,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="sdgBarChart.sw-KE.resx">
       <DependentUpon>sdgBarChart.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgBoxPlot.fr-FR.resx">
+      <DependentUpon>sdgBoxPlot.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgBoxPlot.resx">
+      <DependentUpon>sdgBoxPlot.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgBoxPlot.sw-KE.resx">
+      <DependentUpon>sdgBoxPlot.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="sdgCorrPlot.fr-FR.resx">
       <DependentUpon>sdgCorrPlot.vb</DependentUpon>
