Updated the spreadsheet control to version 1.2.0

--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -2807,6 +2807,7 @@
     <Content Include="lib\unvell.ReoGrid.XML">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="lib\unvell.ReoScript.dll" />
     <Content Include="static\ClimateObject\R\ClimateMethods\Models\readme_model.txt" />
     <Content Include="static\ClimateObject\R\R_front_ends\readme_front.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
