--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -232,6 +232,12 @@
     <Compile Include="dlgCopySheet.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgCummulativeFrequency.Designer.vb">
+      <DependentUpon>dlgCummulativeFrequency.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgCummulativeFrequency.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgDeleteColumn.Designer.vb">
       <DependentUpon>dlgDeleteColumn.vb</DependentUpon>
     </Compile>
@@ -1396,6 +1402,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgCopySheet.sw-KE.resx">
       <DependentUpon>dlgCopySheet.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgCummulativeFrequency.fr-FR.resx">
+      <DependentUpon>dlgCummulativeFrequency.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgCummulativeFrequency.resx">
+      <DependentUpon>dlgCummulativeFrequency.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgCummulativeFrequency.sw-KE.resx">
+      <DependentUpon>dlgCummulativeFrequency.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgDeleteColumn.fr-FR.resx">
       <DependentUpon>dlgDeleteColumn.vb</DependentUpon>
