--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -232,10 +232,10 @@
     <Compile Include="dlgCopySheet.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="dlgCummulativeFrequency.Designer.vb">
-      <DependentUpon>dlgCummulativeFrequency.vb</DependentUpon>
+    <Compile Include="dlgCummulativeDistribution.Designer.vb">
+      <DependentUpon>dlgCummulativeDistribution.vb</DependentUpon>
     </Compile>
-    <Compile Include="dlgCummulativeFrequency.vb">
+    <Compile Include="dlgCummulativeDistribution.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dlgDeleteColumn.Designer.vb">
@@ -1403,14 +1403,14 @@
     <EmbeddedResource Include="dlgCopySheet.sw-KE.resx">
       <DependentUpon>dlgCopySheet.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgCummulativeFrequency.fr-FR.resx">
-      <DependentUpon>dlgCummulativeFrequency.vb</DependentUpon>
+    <EmbeddedResource Include="dlgCummulativeDistribution.fr-FR.resx">
+      <DependentUpon>dlgCummulativeDistribution.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgCummulativeFrequency.resx">
-      <DependentUpon>dlgCummulativeFrequency.vb</DependentUpon>
+    <EmbeddedResource Include="dlgCummulativeDistribution.resx">
+      <DependentUpon>dlgCummulativeDistribution.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgCummulativeFrequency.sw-KE.resx">
-      <DependentUpon>dlgCummulativeFrequency.vb</DependentUpon>
+    <EmbeddedResource Include="dlgCummulativeDistribution.sw-KE.resx">
+      <DependentUpon>dlgCummulativeDistribution.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgDeleteColumn.fr-FR.resx">
       <DependentUpon>dlgDeleteColumn.vb</DependentUpon>
