--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -238,6 +238,12 @@
     <Compile Include="dlgCopySheet.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgCumulativeDistribution.Designer.vb">
+      <DependentUpon>dlgCumulativeDistribution.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgCumulativeDistribution.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgDeleteColumn.Designer.vb">
       <DependentUpon>dlgDeleteColumn.vb</DependentUpon>
     </Compile>
@@ -1429,6 +1435,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgCopySheet.sw-KE.resx">
       <DependentUpon>dlgCopySheet.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgCumulativeDistribution.fr-FR.resx">
+      <DependentUpon>dlgCumulativeDistribution.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgCumulativeDistribution.resx">
+      <DependentUpon>dlgCumulativeDistribution.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgCumulativeDistribution.sw-KE.resx">
+      <DependentUpon>dlgCumulativeDistribution.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgDeleteColumn.fr-FR.resx">
       <DependentUpon>dlgDeleteColumn.vb</DependentUpon>
