--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -316,6 +316,12 @@
     <Compile Include="dlgReorderSheet.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgRestrict.Designer.vb">
+      <DependentUpon>dlgRestrict.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgRestrict.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgScatterPlot.Designer.vb">
       <DependentUpon>dlgScatterPlot.vb</DependentUpon>
     </Compile>
@@ -1570,6 +1576,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgReorderSheet.sw-KE.resx">
       <DependentUpon>dlgReorderSheet.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgRestrict.fr-FR.resx">
+      <DependentUpon>dlgRestrict.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgRestrict.resx">
+      <DependentUpon>dlgRestrict.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgRestrict.sw-KE.resx">
+      <DependentUpon>dlgRestrict.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgScatterPlot.fr-FR.resx">
       <DependentUpon>dlgScatterPlot.vb</DependentUpon>
